# machine-learning-examples

./: pyproject.toml
.github/workflows/: lint-python.yaml  unittest-python.yaml
gbdt/: test_train.py  train.py
two_tower_model/: dataset.py  models.py  test_dataset.py  test_models.py  test_train.py  train.py
two_tower_model/resource/: sample_dataset.csv  sample_test_dataset.csv
